syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service1";
option java_outer_classname = "Service1Impl";

package service1;

// Interface exported by the server.
service Service1 {
	//unary
	rpc desiredSettingHVAC(DesiredRoomConditions) returns (Confirmation){}
	//client streaming
	rpc HVACstatus(stream CurrentRoomConditions) returns (Acknowledged){}
	//Server stream:
	rpc RoomStatus(Room) returns (stream AdjustHVAC){}
};

message DesiredRoomConditions{
	string roomName = 1;
	float desiredHumidity = 2;
	float desiredTempInCelcius = 3;

}

message Confirmation{
	string confirmation = 1;
}

message CurrentRoomConditions{
	string roomName = 1;
	float humidity = 2;
	float tempInCelcius = 3;
}

message Acknowledged{
	string acknowledgment = 1;
}

message Room{
	string roomName = 1;
}

message AdjustHVAC{
	double humidityDifference = 1;
	double tempDifference = 2;
}
