syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service2";
option java_outer_classname = "Service2Impl";

package service2;

// Interface exported by the server.
service Service2 {
  rpc DeskStatusHeight(DeskDetailsRequest) returns (DeskAdjustedResponse){};
  //rpc service2_do(RequestMessage) returns (ResponseMessage) {}
    
}

message DeskDetailsRequest{
	int32 deskNumber = 1;
	string roomName = 2;
	int32 desiredDeskHeight = 3;

	 enum Operation{
  	DESKUP =0;
  	DESKDOWN=1;
   }
  Operation operation = 4;

}

message DeskAdjustedResponse {
  int32 deskHeight = 1;
  bool isHeightAdjusted = 2;
}
